fixed: search todoLists in a addToDo2.js  file

--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 :root {
-  /* theme mode */
+  --body__font: "Comic Sans MS", "Comic Sans", cursive;
+
   --black: #1e2022;
   --white: #ffffff;
 
-  /*font family */
-  --body__font: "Comic Sans MS", "Comic Sans", cursive;
-
-  /* basic color  */
   --sky__blue: rgb(55, 125, 255);
   --white__blue: #ebf2ff;
   --light__yellow: #fae7c1;
@@ -32,7 +29,6 @@ body {
 }
 
 #card {
-  /* display: none; */
   margin-top: 16px;
   padding: 56px;
   background-color: rgb(204 204 204 / 41%);
@@ -71,10 +67,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 36px;
-}
-
-.todo__result {
   margin-bottom: 36px;
 }
 
@@ -157,6 +149,7 @@ ul li {
   transition: transform 0.5s ease-in-out;
   transform: scale(1);
 }
+
 ul li:hover {
   transform: scale(1.05);
 }
@@ -170,6 +163,12 @@ ul li:hover {
   gap: 16px;
 }
 
+#todo__result {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 36px;
+}
+
 .todo__complete {
   background-color: var(--white__blue);
 }
@@ -178,11 +177,9 @@ ul li:hover {
   text-decoration: line-through;
 }
 
-/* .todo__not__complete {
-  background-color: red;
-} */
-
 .circle {
+  width: 60px;
+  height: 60px;
   position: relative;
   display: flex;
   align-items: center;
@@ -191,8 +188,6 @@ ul li:hover {
   line-height: 1;
   border-radius: 50%;
   overflow: hidden;
-  width: 60px;
-  height: 60px;
   margin-bottom: 10px;
   box-shadow: rgba(140, 152, 164, 0.125) 0px 6px 24px 0px;
 }
@@ -214,12 +209,6 @@ ul li:hover {
   height: 50px;
 }
 
-#todo__result {
-  display: none;
-  justify-content: space-between;
-  margin-bottom: 36px;
-}
-
 #no__to__do {
   display: none;
   align-items: center;
@@ -229,7 +218,6 @@ ul li:hover {
   padding: 30px;
   color: var(--danger);
   font-size: 24px;
-  /* background-color: rgb(255, 255, 255); */
   box-shadow: rgba(140, 152, 164, 0.125) 0px 6px 24px 0px;
   margin-top: 16px;
   padding: 40px 30px;
@@ -245,13 +233,12 @@ ul li:hover {
 }
 
 #deleteContainer {
+  width: 100%;
+  height: 100vh;
   display: none;
-  /* display: flex; */
   align-items: center;
   justify-content: center;
   position: fixed;
-  width: 100%;
-  height: 100vh;
   background: #00000082;
   z-index: 1;
 }
@@ -269,11 +256,6 @@ ul li:hover {
   border-radius: 4px;
   transition: transform 0.5s ease-in-out;
   transform: scale(1);
-  /*  */
-  /* position: fixed; */
-  /* top: 25%;
-  left: 40%;
-  z-index: 1; */
 }
 
 #sureButton {
